--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,13 +2,15 @@ body {
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
-
+.panel {
+	margin-top:30px;
+}
 
 h1, h2{
 	color: darkorange;
 	text-transform: uppercase;
 	font-weight: bolder;
-	padding: 23px 0px;
+	padding: 10px 0px;
 
 }
 
@@ -16,10 +18,6 @@ h1#timeRemain{
 	font-size: 100px;
 	padding-top:30px;
 }
-
-
-
-
 
 .panel-title{
 	font-size: 20px;
@@ -64,7 +62,7 @@ button.option:hover {
 
 
 button#resetButton  {
-	margin: -60px auto 30px;
+	margin-top:-120px;
 	padding:10px 20px;
 	border-color: darkorange;
 	border-width: 2px;
