--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,39 @@
 body {
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	
+	background: url("../images/bgg.jpg") no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+p {
+	color: white;
+	font-size: 18px;
 }
 
 .panel {
 	margin-top:30px;
+	border-color: darkorange;
 }
 
-h1, h2{
-	color: darkorange;
+h1{
+	color: #007f69;
+	text-transform: uppercase;
+	font-weight: bolder;
+	padding: 20px 0px;
+
+}
+
+h3{
+	color: white;
+	text-transform: uppercase;
+	font-weight: bolder;
+}
+
+h2{
+	color: white;
 	text-transform: uppercase;
 	font-weight: bolder;
 	padding: 10px 0px;
@@ -17,17 +43,36 @@ h1, h2{
 h1#timeRemain{
 	font-size: 100px;
 	padding-top:30px;
+	color: white;
 }
 
-.panel-title{
-	font-size: 20px;
-	color:black;
-	text-transform: uppercase;
 
+
+.panel-default>.panel-heading{
+	font-size: 20px;
+	color:white;
+	text-transform: uppercase;
+	background-color: darkorange;
+	border-color: transparent;
+
+}
+
+.panel-default{
+    background: transparent;
+}
+.panel-default .panel-body{
+    background: transparent;
 }
 
 .panel-body{
 	height: 250px;
+}
+
+
+.btn-default{
+	background: rgba(225,225,225,0.5); 
+	color: rgba(0,0,0,1); 
+
 }
 
 button#startButton  {
@@ -35,6 +80,8 @@ button#startButton  {
 	padding:10px 20px;
 	border-color: darkorange;
 	border-width: 2px;
+	background: rgba(300,300,300,1); 
+	color:darkorange;
 }
 
 button#startButton:hover {
@@ -66,6 +113,8 @@ button#resetButton  {
 	padding:10px 20px;
 	border-color: darkorange;
 	border-width: 2px;
+	background: rgba(300,300,300,1); 
+	color:darkorange;
 }
 
 button#resetButton:hover {
@@ -89,6 +138,14 @@ button#resetButton:hover {
 
 	h1#timeRemain{
 	font-size: 50px;
+	}
+
+	button#resetButton  {
+	margin-top: -10px;
+	}
+
+	h1 {
+		padding:20px 0px 0px 0px; 
 	}
 
 	
@@ -120,6 +177,10 @@ button#resetButton:hover {
 
 	h1#timeRemain{
 	font-size: 100px;
+	}
+
+	button#resetButton  {
+	margin-top:-120px;
 	}
 
 	
