--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,211 +1,527 @@
+@import url('https://fonts.googleapis.com/css?family=Homemade+Apple');
+@font-face {
+    font-family: "Atmostphere";
+    src: url("css/fonts/Harabara.eot");
+    src: 
+    url("../css/fonts/atmosphere-regular-webfont.woff") format("woff"),
+    url("../css/fonts/atmosphere-regular-webfont.otf") format("opentype"),
+    url("../css/fonts/Atmosphere-Regular.svg#filename") format("svg");
+    }
+
+
 body {
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-	
-	background: url("../images/bgg.jpg") no-repeat center center fixed; 
-	-webkit-background-size: cover;
+    overflow-x: hidden;
+    font-family: "Avenir Next", sans-serif !important;
+    background-image: url('../images/startBg.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center; 
+    background-size: cover;
+    -webkit-background-size: cover;
 	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
+    -o-background-size: cover;
+    -webkit-transition-timing-function: 1.5s linear;
+    transition: 1s linear;
+    
 }
 
-p {
-	color: white;
-	font-size: 18px;
+.vnTxt {
+    width: 1320px;
+    height: auto;
+    position: relative;
+    margin: 200px auto 0 10px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 10px;
 }
 
-.panel {
-	margin-top:30px;
-	border-color: darkorange;
-}
-
-h1{
-	color: #007f69;
-	text-transform: uppercase;
-	font-weight: bolder;
-	padding: 20px 0px;
-
-}
-
-
-h2{
-	color: white;
-	text-transform: uppercase;
-	font-weight: bolder;
-	padding: 80px 0px 0px;
-
-}
-
-h3{
-	color: white;
-	text-transform: uppercase;
-	font-weight: bolder;
-	padding: 10px 0px;
-}
-
-h4{
-	color: white;
-	text-transform: uppercase;
-	font-weight: bolder;
-	padding: 80px 0px 0px;
-font-size:20px;
+h4#disc {
+    font-size: 15px;
+    color: #fff;
+    letter-spacing: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    line-height: 2.5em;
+    margin: 25px auto 0px 25px;
+  
 }
 
 
-h1#timeRemain{
-	font-size: 100px;
-	padding-top:30px;
-	color: white;
-}
-
-
-
-.panel-default>.panel-heading{
-	font-size: 20px;
-	color:white;
-	text-transform: uppercase;
-	background-color: darkorange;
-	border-color: transparent;
-
-}
-
-.panel-default{
-    background: transparent;
-}
-
-.panel-body{
-    background: transparent;
-    height: 250px;
-}
-
-.gif {
-	max-height: 200px;
-	/*max-width: 200px;*/
-	padding: auto;
-}
-
-#imageHolder {
-	margin-top: 10px;
-}
-
-.btn-default{
-	background: rgba(225,225,225,0.5); 
-	color: rgba(0,0,0,1); 
-
-}
-
-button#startButton  {
-	margin: 30px auto;
-	padding:10px 20px;
-	border-color: darkorange;
-	border-width: 2px;
-	background: rgba(300,300,300,1); 
-	color:darkorange;
-}
-
-button#startButton:hover {
-	color: white;
-	background-color: darkorange;
-	border-color:darkorange;
-
-}
-
-button.option  {
-	margin: 30px auto;
-	padding:10px 0px;
-	border-color: darkorange;
-	border-width: 2px;
-	width: 250px;
-
-}
-
-button.option:hover {
-	color: white;
-	background-color: darkorange;
-	border-color:darkorange;
+#box {
+    width: 150px;
+    height: 450px;
+    border: solid 1.5px #fff;
+    position: absolute;
+    margin: auto;
+    top: -100px;
+    right: 0;
+    bottom: 0;
+    left: 0;
 
 }
 
 
-button#resetButton  {
-	margin-top: 20px;
-	padding:10px 20px;
-	border-color: darkorange;
-	border-width: 2px;
-	background: rgba(300,300,300,1); 
-	color:darkorange;
-}
-
-button#resetButton:hover {
-	color: white;
-	background-color: darkorange;
-	border-color:darkorange;
+h4#start{
+    font-size: 15px;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    line-height: 3em;
+    top: 97%;
+    left: 48.5%;
+    position: absolute;
+    -ms-transform: translate(-48%, -48%);
+    transform: translate(-48%, -48%);
 
 }
 
 
-/*-------------MEDIA QUERIES-------------*/
+h1#vn {
+    text-transform: uppercase;
+    text-align: center;
+    font-family: 'Atmostphere', Arial, sans-serif;
+    letter-spacing: 1.2em;
+    font-size: 100px;
+    color: #FE7900;
+    position: absolute;
+    margin: 160px auto 0 -412px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0px;
+}
+
+
+svg.svg-inline--fa:hover {
+    color: #fff;
+}
+
+
+.fa-play {
+    color: #FE7900;
+    /* color: #FEE098; */
+    animation: pulse2 .4s infinite;
+    cursor: pointer!important;
+}
+
+
+@keyframes pulse2 {
+	0% { transform: scale(1) rotate(90deg); }
+	35% { transform: scale(1.5) rotate(90deg); }
+	100% { transform: scale(1) rotate(90deg); }
+	}
+
+
+/* ================== question section ============== */
+
+#questionDisplay, #answerDisplay {
+    width: auto;
+    height: 350px;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto 50px;
+    opacity: 0.2;
+
+};
+
+
+p.multiChoice::after {
+    border: solid 1px #333;
+}
+
+
+h1.countDown {
+    color: #FE7900!important; 
+    font-weight: 600;
+    margin-top: 18px;
+}
+
+.abcd {
+    color: #FE7900;
+    font-weight: bold;
+    font-size:18px;
+    
+}
+
+/* .multiChoice:hover{
+    animation-name: rotate; 
+    animation-duration: 3s; 
+    animation-timing-function: linear;
+  }
+  @keyframes rotate {
+      from {transform: rotateY(0deg);}
+      to {transform: rotateY(360deg);}
+  } */
+
+  .multiChoice {
+    margin : 0 auto;
+    width : auto;
+    height : 60px;
+    overflow : hidden;
+    text-align : center;
+    transition : .2s;
+    cursor : pointer;
+  }
+
+  .multiChoice > p {
+    margin: 0px;
+    text-transform: capitalize;
+    transition : .3s;
+}
+
+.multiChoice:hover > p{
+    margin-left : 35px;
+  }
+
+  .hoverEffect {
+    position : relative;
+    border : 1px solid #333;
+    width : 200px;
+    height : 200px;
+    margin-top: -100px;
+    background : #FE7900;
+    left : -250px;
+    transition : .3s;
+    transform : rotate(20deg);
+    opacity: 0.9;
+  }
+  .multiChoice:hover .hoverEffect{
+    left: -165px;
+  }
+
+  .sure {
+    margin-top : 42px;
+    margin-right : -140px;
+    color : #fff;
+    transform : rotate(-20deg);
+    font-size:12px;
+  }
+
+  /* =================== PROCESS BAR ANIMATION ================ */
+
+  #progressBar {
+    width: 100%;
+    margin-top:40px;
+    height: 15px;
+    background-color: transparent;
+    /* border: solid 1px #FE7900; */
+  }
+
+  .progressbar .inner {
+    height: 15px;
+    /* border: solid 1px #FE7900; */
+    animation: progressbar-countdown;
+    animation-duration: 11s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    animation-play-state: paused;
+    animation-timing-function: linear;
+  }
+  @keyframes progressbar-countdown {
+    0% {
+      width: 100%;
+      background: #FE7900;
+    }
+    50% {
+        width: 50%;
+        background: #FE7900;
+      }
+    100% {
+      width: 0%;
+      background: #333;
+    }
+  }
+  
+
+
+/* ================== answer section ============== */
+
+
+.checkAns{
+    line-height: 1.5em;
+    letter-spacing: 0.1em;
+    font-weight: 400;
+    padding-left:20px;
+    padding-top: 110px;
+   
+}
+
+.boldTxt {
+    color: #FE7900; 
+    font-weight:bold; 
+    letter-spacing: 10px;
+}
+
+
+#correctAns > p {
+    letter-spacing: 0.7em;
+    line-height: 3em;
+    padding-left:30px;
+    padding-top: 100px;
+}
+
+.questionNum {
+    padding-top: 115px;
+}
+
+.img-responsive{
+    display: inline-block;
+    padding-left:30px;
+}
+
+
+/* ===========result section ========== */
+
+#resultBox {
+    width: 230px;
+    height: 450px;
+    border: solid 1.5px #fff;
+    position: absolute;
+    margin: auto;
+    top: -80px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+}
+
+
+h4.result {
+    font-size: 15px;
+    letter-spacing: 0.1em;
+    color: #fff;
+    text-align: justify;
+    text-transform: uppercase;
+    line-height: 2.2em;
+    margin: 25px auto 0px 20px;
+  
+}
+
+h4#again{
+    font-size: 15px;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    line-height: 3em;
+    top: 97%;
+    left: 48.5%;
+    position: absolute;
+    -ms-transform: translate(-48%, -48%);
+    transform: translate(-48%, -48%);
+
+}
+
+h1#resultTxt {
+    text-transform: uppercase;
+    text-align: center;
+    font-family: 'Atmostphere', Arial, sans-serif;
+    letter-spacing: 1.25em;
+    font-size: 100px;
+    color: #FE7900;
+    position: absolute;
+    margin:200px auto 0 -430px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0px;
+}
+
+
+
+
+
+
+
+
+
+/*================================================ MEDIA QUERIES ================================================*/
 /* Custom, iPhone Retina */
-@media only screen and (min-width: 320px) {
-	.panel-body{
-	height: auto;
-	}
+@media only screen and (max-width: 320px) {
+    
+        
+    }
+    
+    
+    /* Extra Small Devices, Phones */
+    @media only screen and (max-width: 480px) {
+    
+     
+    }
+    
+    
+    /* Small Devices, Tablets */	
+    @media only screen and (max-width: 767px) {
+        h1#vn {
+            font-size: 35px!important;
+            letter-spacing: 0.5em!important;
+            line-height: 80px!important;
+            margin: 150px auto 0 15px!important;
+            text-align: center!important;
+            color:FE7900;
 
-	button.option  {
-	margin: 15px auto;
-	}
+        }
 
-	#displayAnswer{
-		margin-top: -70px;
-	}
 
-	.gif {
-		max-width: 90%;
-	}
+        h1#resultTxt {
+            font-size: 45px!important;
+            letter-spacing: 0.3em!important;
+            line-height: 70px!important;
+            margin: 180px auto 0 10px!important;
+            text-align: center!important;
+            color:#FE7900;
+        }
 
-	h1 {
-		padding:20px 0px 0px 0px; 
-	}
+        .fa-play {
+            color: #FF7000;
+           
+        }
 
-	
 
-/* Extra Small Devices, Phones */
-@media only screen and (min-width: 480px) {
-	
-}
+        /* ================== question section ============== */
+        #questionDisplay {
+            width: auto;
+            position: relative!important;
+            padding: 210px 10px!important;
+            margin: auto!important;
+        }
 
-/* Small Devices, Tablets */
-@media only screen and (min-width: 768px) {
 
-}
+        #timeSection{
+            margin-top: -370px!important;
+            
+        }
 
-/* Medium Devices, Desktops */
-@media only screen and (min-width: 992px) {
+        /* h4#questionAsks {
+            margin-top: 60px!important;
+        } */
 
-}
+        .countDown {
+            margin-top: -330px!important;
+            margin-left:-30px!important;
+        }
 
-/* Large Devices, Wide Screens */
-@media only screen and (min-width: 1024px) {
-	.panel-body{
-	height: 250px;
-	}
+        .top {
+            margin-top:50px;
+        }
 
-	button.option  {
-	margin: 30px auto;
-	}
+        .bottom {
+            margin-top: -30px;
+        }
 
-	h1#timeRemain{
-	font-size: 100px;
-	}
 
-	#displayAnswer{
-		margin-top: -40px;
-	}
+        
+    
+    
+    }
+    
+    
+    /* Medium Devices, Desktops */
+    @media only screen and (max-width: 992px) {
+        h1#vn {
+            font-size: 80px;
+            line-height: 80px;
+            margin: 160px auto 0 -310px;
 
-	
+        }
 
-	
-}
+        h1#resultTxt {
+            font-size: 50px!important;
+            margin: 185px auto 0 15px!important;
+            letter-spacing: 0.3em;
+            line-height: 1.3em;
+        }
 
+        /* ================== answer section ============== */
+          h3.checkAns, #correctAns > p, .questionNum {
+            margin-top:-40px;
+            padding-left:0px!important;
+            text-align: center!important;
+        }
+
+        #answerDisplay {
+            position: relative!important;
+            padding: 50px 0px!important;
+            
+        }
+
+        #image-holder {
+            margin-top:35px!important;
+          
+            
+        }
+
+        .img-responsive {
+            padding-left:0px!important;
+        }
+        
+
+    
+    }
+
+
+  
+
+
+
+    @media only screen and (max-width: 1024px){
+        h1#resultTxt {
+            font-size: 90px;
+            margin: 200px auto 0 -370px;
+            
+        }
+    }
+    
+    
+    /* Custome screen */ 
+    @media only screen and (max-width: 1074px) {
+        #correctAns > p  {
+            letter-spacing: 0.5em;
+        }
+        h3.checkAns{
+            font-size:20px;
+        }
+    }
+
+
+      @media only screen and (min-width: 768px) and (max-width: 1024px) {
+        /* HOVER SURE? EFFECT CUSTOMIZE SCREEN */
+        .multiChoice {
+            width: 150px;
+        }
+
+        .top, .bottom {
+            margin-left:-60px;
+        }
+
+        .multiChoice:hover > p{
+            margin-left : 20px;
+        }
+
+
+    }
+    
+    /* Large Devices, Wide Screens */
+    @media only screen and (max-width: 1200px) {
+        #correctAns >p {
+            padding-top: 50px!important;
+        }
+
+        h3.checkAns {
+            letter-spacing: 2.1px!important;
+            padding-top: 60px!important;
+        }
+
+        .questionNum {
+            padding-top: 70px!important;
+        }
+
+      
+      
+    }
 
 
 
